# classifim-gen

./: CMakeLists.txt  README.md  pyproject.toml
dmrgpy/: tmp.sh  tmp.txt
dmrgpy/examples/chain_correlation/: main.py
dmrgpy/src/dmrgpy/mpsjulia/: Manifest.toml  Project.toml
examples/: fil_24_gen.ipynb  hubbard12_gen.ipynb  isnnn_400.ipynb  isnnn_400_gen.ipynb  kitaev_20_gen.ipynb  xxz_300_gen.ipynb
hpc/: classifim.yml  conda_create.slurm  dmrgpy_xxz_getmps.py  dmrgpy_xxz_getmps.slurm  fil24_lanczos.py  fil24_lanczos.sh  fix_hdf5.py  hubbard12_cleanup.sh  hubbard12_lanczos.py  hubbard12_lanczos.sh  hubbard12_probs.py  hubbard12_probs.sh  kitaev_fermft.py  kitaev_fermft.slurm  mnist_42_0.py  mnist_42_0.slurm  remove_stale_locks.sh  rm_locks.sh  xxz_opt.py  xxz_opt.sh  xxz_opt.slurm  xxz_w.py  xxz_w.slurm
src/classifim_gen/: Makefile  __init__.py  bits.py  evec_continuation.py  fft.py  fidelity.py  fil24_hamiltonian.py  gs_cache.py  gs_utils.py  hamiltonian.py  hpc_tools.py  huang_pca.py  hubbard_hamiltonian.py  io.py  ising_mcmc.py  kitaev20_dataset.py  kitaev_hamiltonian.py  linalg.py  metric.py  mnist_cnn_dataset.py  peaks.py  plot_tools.py  progress_printer.py  simple_hamiltonian.py  xxz.py
src/classifim_gen/cpp_src/: CMakeLists.txt  fil24_hamiltonian.cpp  fil24_hamiltonian.h  fil24_hamiltonian_wrapper.cpp  fil24_hamiltonian_wrapper.h  ising_mcmc.cpp  ising_mcmc.h  ising_mcmc_wrapper.cpp  ising_mcmc_wrapper.h  metric.cpp  metric.h  metric_wrapper.cpp  metric_wrapper.h
tests/: test_evec_continuation.py  test_fft.py  test_fil24_hamiltonian.py  test_hamiltonian.py  test_hubbard_hamiltonian.py  test_linalg.py  test_metric.py  test_peaks.py  test_quspin.py
tests/cpp_src/: CMakeLists.txt  test_fil24_hamiltonian.cpp  test_ising_mcmc.cpp
